--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
    
     <section class="output">
       <div>
-        button
+        <button>Teste</button>
       </div>
    
       <div>
@@ -65,6 +65,9 @@
 
 
 <style>
+  *{
+    box-sizing: border-box;
+  }
   nav{
     width: 300px;
     height: 640px;
@@ -81,6 +84,8 @@
     flex: 1;
     margin-left: 10px;
     background: #cce0ff;
+    display: flex;
+    flex-direction: column;
   }
   #app{
     display: flex;
@@ -108,6 +113,13 @@
     background: none;
     border: 2px solid #222;
     outline: none;
+  }
+  section * {
+    border: 1px solid red
+  }
+  section div{
+    flex: 1;
+    padding: 20px;
   }
 </style>
 </html>
