correçao de ortografia

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <label for="fontFamily">Font-Family</label>
         <select name="fontFamily" id="fontFamily" v-model="fontFamily">
           <option disabled value="">Seleciona uma fonte</option>
-          <option value="'Arial', sans-serif">Arial</option>
+          <option value="Arial, sans-serif">Arial</option>
           <option value="Helvetica, sans-serif">Helvetica</option>
           <option value="'Trebuchet MS', sans-serif">Trebuchet MS</option>
           <option value="Georgia, serif">Georgia</option>
