--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         fontFamily: 'Arial',
         bgColor: '#FFFFFF',
         color: '#000000',
-        borderRadius: '',
+        borderRadius: '0',
         border: 0,
         borderColor: '#000000',
       },
